--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
     "env": {
         "es6": true,
         "node": true,
-        "jest": true
+        "jest": true,
+        "mocha": true
     },
     "extends": "airbnb-base",
     "globals": {
@@ -14,5 +15,11 @@
         "sourceType": "module"
     },
     "rules": {
+        "no-unused-vars": [
+            "error",
+            {
+                "varsIgnorePattern": "should|expect"
+            }
+        ]
     }
 }
